src/objects/DM_Request__c.object
<CustomObject>
    <description>Case: Track the DM Request. This is also used by Campaign for bulk DM Request</description>
    <fields>
        <fullName>Actual_DM_Material1__c</fullName>
        <label>Actual DM Material1</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material1)</relationshipLabel>
        <relationshipName>DM_Fulfill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_DM_Material2__c</fullName>
        <label>Actual DM Material2</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material2)</relationshipLabel>
        <relationshipName>DM_Fulfill1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_DM_Material3__c</fullName>
        <label>Actual DM Material3</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Actual DM Material3)</relationshipLabel>
        <relationshipName>DM_Fulfill2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>TEXT(Customer_Name__r.Province__c ) + &apos;, &apos; + TEXT(Customer_Name__r.City_CN__c ) + &apos;, &apos; +  Customer_Name__r.Primary_Address__c + &apos;, &apos; +  Customer_Name__r.ZipCode__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;相关车辆&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>TEXT( Customer_Name__r.City_CN__c )</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DM_Request_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>DM Request External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;计划投递日期&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material1__c</fullName>
        <label>Expected DM Material1</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material1)</relationshipLabel>
        <relationshipName>DM_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material2__c</fullName>
        <label>Expected DM Material2</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material2)</relationshipLabel>
        <relationshipName>DM_Request3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_DM_Material3__c</fullName>
        <label>Expected DM Material3</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (Expected DM Material3)</relationshipLabel>
        <relationshipName>DM_Request4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <formula>Contact__r.HomePhone</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;相关线索&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DM Request</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <formula>Customer_Name__r.Phone</formula>
        <label>Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>Customer_Name__r.Primary_Address__c</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <formula>TEXT(Customer_Name__r.Province__c)</formula>
        <label>Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Mobile__c</fullName>
        <formula>Customer_Name__r.Second_Mobile__c</formula>
        <label>Second Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentName__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;投递资料详情&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>SentName</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (SentName)</relationshipLabel>
        <relationshipName>DM_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuggestedName__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  CAC User
Function: Mapping &apos;推荐资料名称&apos; in Data Dictionary.
Used in: Integration

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>SuggestedName</label>
        <referenceTo>DM_Material__c</referenceTo>
        <relationshipLabel>DM Request (SuggestedName)</relationshipLabel>
        <relationshipName>DM_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Customer_Name__r.ZipCode__c</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>DM Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failed_DM_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed DM Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Open_DM_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open DM Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Returned_DM_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Returned</value>
        </filters>
        <label>Returned DM Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Sent_DM_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_DM_Material1__c</columns>
        <columns>Expected_DM_Material2__c</columns>
        <columns>Expected_DM_Material3__c</columns>
        <columns>Actual_DM_Material1__c</columns>
        <columns>Actual_DM_Material2__c</columns>
        <columns>Actual_DM_Material3__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>Comment__c</columns>
        <columns>Campaign__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Sent DM Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>DMR-{000000}</displayFormat>
        <label>DM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>